--- a/tagged template.html
+++ b/tagged template.html
@@ -17,7 +17,7 @@
 
 </div>
 <script>
-//    // (vedi debugger dentro la funzione)
+//    // (vedi debugger dentro la funzione:)
 //    // la funzione passa la const "sentence" e
 //    // ritorna un array con stringhe e
 //    // uno con i valori (dove ci sono le ${})
@@ -50,7 +50,7 @@
         JS: 'JAVASCRIPT'
     };
     // taggare una funzione serve a rendere più pulito il codice, senza dover
-    // srivere una funzione dentro una const, ma utilizzando i valori della stessa
+    // scrivere una funzione dentro una const, ma utilizzando i valori della stessa
     function addAbbreviations(strings, ...values) {
         const abbreviated = values.map(value => {
             if(dict[value]) {
