--- a/Sets.html
+++ b/Sets.html
@@ -25,7 +25,7 @@
 //		console.log(person);
 	}
 
-    // you can pass value tu sets like an array:
+    // you can pass value to sets like an array:
     const students = new Set(['lara', 'cara', 'mara']);
     const dogs = ['cane', 'cagno'];
     const dogSet = new Set(dogs);
